# Aqua

./: README.eng.md  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  nginx.dev.conf
backend/: .env-template  Dockerfile  README.eng.md  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml
backend/assets/module-relationship-map/: diagram.drawio
backend/assets/module-structure-map/: diagram.drawio
backend/scripts/: init-and-start.sh  init.sh  start.sh
backend/src/: db.py  main.py
backend/src/aqua/: __init__.py
backend/src/aqua/application/: __init__.py  cases.py  day_reading.py  day_record_reading.py  day_writing.py  errors.py  registration.py  repos.py  writing.py
backend/src/aqua/application/cases/: __init__.py  day_reading.py  day_record_reading.py  register_user.py  registration.py  user_data_reading.py  write_water.py  writing.py
backend/src/aqua/application/ports/: __init__.py  repos.py
backend/src/aqua/domain/: __init__.py  entities.py  errors.py  value_objects.py
backend/src/aqua/infrastructure/: __init__.py
backend/src/aqua/infrastructure/adapters/: __init__.py  repos.py  uows.py
backend/src/aqua/presentation/: __init__.py  errors.py
backend/src/aqua/presentation/adapters/: registration.py  writing.py
backend/src/aqua/presentation/di/: __init__.py  containers.py  providers.py
backend/src/aqua/presentation/di/facade/: read_day.py  read_day_records.py  read_user.py  register_user.py  write_water.py
backend/src/aqua/presentation/facade/: __init__.py  errors.py
backend/src/aqua/presentation/facade/controllers/: __init__.py  day_reading.py  day_record_reading.py  registration.py  user_data_reading.py  writing.py
backend/src/auth/: __init__.py
backend/src/auth/adapters/: serializers.py
backend/src/auth/application/: __init__.py  authentication.py  authorization.py  cases.py  dtos.py  errors.py  registration.py
backend/src/auth/application/cases/: __init__.py  access_extension.py  authenticate_user.py  authentication.py  authorization.py  read_user.py  refresh_token.py  register_user.py  registration.py  user_data_reading.py
backend/src/auth/application/ports/: __init__.py  generators.py  places.py  repos.py  serializers.py
backend/src/auth/domain/: __init__.py  entities.py  errors.py  value_objects.py
backend/src/auth/infrastructure/: __init__.py  converters.py  repos.py  serializers.py
backend/src/auth/infrastructure/adapters/: __init__.py  repos.py  serializers.py
backend/src/auth/presentation/: __init__.py  errors.py  secrets.py
backend/src/auth/presentation/adapters/: access_extension.py  authentication.py  authorization.py  registration.py
backend/src/auth/presentation/di/: containers.py
backend/src/auth/presentation/facade/: __init__.py  errors.py
backend/src/auth/tests/: adapters.py  test_cases.py  test_registration.py  test_serializers.py  test_value_objects.py
backend/src/entrypoint/: __init__.py
backend/src/entrypoint/application/: __init__.py  registration.py  writing.py
backend/src/entrypoint/application/cases/: __init__.py  day_reading.py  day_record_reading.py  registration.py  user_data_reading.py  writing.py
backend/src/entrypoint/application/ports/: __init__.py  actions.py  gateways.py
backend/src/entrypoint/infrastructure/: __init__.py
backend/src/entrypoint/infrastructure/adapters/: __init__.py  actions.py  gateways.py
backend/src/entrypoint/presentation/: __init__.py  cookies.py  error_messages.py  error_responses.py  main.py  routes.py
backend/src/entrypoint/presentation/adapters/: registration.py  writing.py
backend/src/entrypoint/presentation/facade/: __init__.py
backend/src/shared/: __init__.py
backend/src/shared/application/: __init__.py  repos.py
backend/src/shared/application/ports/: __init__.py  transactions.py  uows.py
backend/src/shared/domain/ports/: repos.py
backend/src/shared/infrastructure/: __init__.py  envs.py  uows.py
backend/src/shared/infrastructure/adapters/: __init__.py  transactions.py  uows.py
backend/src/shared/infrastructure/db/: __init__.py  engines.py  models.py  sessions.py  tables.py
backend/src/shared/infrastructure/periphery/: envs.py
backend/src/shared/infrastructure/redis/: connecting.py
backend/src/shared/presentation/: __init__.py
backend/src/shared/presentation/di/: __init__.py  providers.py
services/backend/: .env-template  .gitignore  Dockerfile  README.eng.md  README.md  alembic.ini  docker-compose.dev.yml  nginx.dev.conf  pyproject.toml
services/backend/assets/module-relationship-map/: diagram.drawio
services/backend/assets/module-structure-map/: diagram.drawio
services/backend/scripts/aqua-mongo1/: init-cluster.js
services/backend/scripts/mongo1/: init-cluster.js
services/backend/src/aqua/: .env-template  __init__.py
services/backend/src/aqua/application/: __init__.py
services/backend/src/aqua/domain/: __init__.py  entities.py  value_objects.py
services/backend/src/aqua/infrastructure/: __init__.py
services/backend/src/aqua/presentation/: __init__.py
services/backend/src/auth/: .env-template  __init__.py  alembic.ini
services/backend/src/auth/application/: __init__.py
services/backend/src/auth/domain/: __init__.py  entities.py  value_objects.py
services/backend/src/auth/domain/framework/: env.py  (+5 more)
services/backend/src/auth/infrastructure/: __init__.py
services/backend/src/auth/presentation/: __init__.py
services/backend/src/entrypoint/: .env-template  __init__.py
services/backend/src/entrypoint/application/: __init__.py
services/backend/src/entrypoint/infrastructure/: __init__.py
services/backend/src/entrypoint/langtools/: __init__.py  context.py
services/backend/src/entrypoint/logic/: __init__.py
services/backend/src/entrypoint/presentation/: __init__.py  cookies.py  main.py
services/backend/src/shared/: __init__.py
services/backend/src/shared/application/: __init__.py
services/backend/src/shared/domain/: __init__.py
services/backend/src/shared/infrastructure/: __init__.py
services/backend/src/shared/presentation/: __init__.py
(+913 files in other folders)
