[tool.poetry]
name = "aqua"
version = "0.1.0"
description = "Application for tracking your water balance"
authors = ["emptybutton <88573504+emptybutton@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
typenv = "^0.2.0"
asyncpg = "^0.29.0"
dishka = "^1.3.0"
uvicorn = "^0.30.6"
structlog = "^24.4.0"
rich = "^13.7.1"
dirty-equals = "^0.8.0"
result = "^0.17.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"
ruff = "^0.7.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[tool.poetry.group.fix.dependencies]
certifi = "^2024.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
no_namespace_packages = true

[tool.ruff]
src = ["src"]
preview = true
line-length = 80
indent-width = 4

[tool.ruff.lint]
select = [
    "ANN", "F", "W", "E", "B", "C90", "N", "UP", "YTT", "ASYNC", "PL", "RUF",
    "Q", "RET", "SLF", "SLOT", "SIM", "TID252", "TCH", "ARG", "PTH", "ERA", "TRY",
    "PERF", "INP", "I", "S", "FAST", "TID", "TCH", "INT"
]
ignore = ["ANN101", "ANN102", "N818", "RUF009", "UP018", "PLR6301", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["PLC0414"]
"*/cases/*" = ["PLR0911"]
"*/usecases/*" = ["PLR0911"]
"*/adapters/*" = ["ARG002", "S101"]
"*/domain/*" = ["PLR2004"]
"src/entrypoint/presentation/periphery/api/controllers/routes/*" = ["PLR0911"]
"*/tests/*" = ["PLR2004", "S101"]

[tool.ruff.lint.isort]
lines-after-imports = 2
